Fix screenshot shadows in dark mode

--- a/styles/styleSheet.css
+++ b/styles/styleSheet.css
@@ -28,6 +28,7 @@
 	--lightlink-color: var(--link-color);
 	--footer-color: rgba(0, 0, 0, 0.5);
 	--system-requirements-color: rgba(255, 255, 255, 0.75);
+	--screenshot-shadow: 0 10px 15px 10px rgba(164, 164, 164, 0.1);
 }
 @media(prefers-color-scheme: dark) {
 	:root {
@@ -57,6 +58,7 @@
 	--lightlink-color: rgba(255, 255, 255, 0.9);
 	--footer-color: rgba(255, 255, 255, 0.5);
 	--system-requirements-color: rgba(255, 255, 255, 0.75);
+	--screenshot-shadow: none;
 	}
 }
 
@@ -276,7 +278,7 @@ pre {
 
 .shadow,
 .shadowedBox {
-	box-shadow: 0 10px 15px 10px rgba(164, 164, 164, 0.1);
+	box-shadow: var(--screenshot-shadow);
 	border: 1px solid #C7C7C7;
 }
 
